# SentinelCore

./: .env.example  .gitignore  Dockerfile  Dockerfile.docs  README-TIMELINE.md  README.md  TASKS_MIGRATION_GUIDE.md  celerybeat-schedule  docker-compose.yml  flower  flower.db  manage.py  mkdocs.yml  pyproject.toml  schema.yml
alerts/: admin.py  apps.py  models.py  tasks.py
api/: __init__.py  apps.py  permissions.py  routers.py  signals.py  urls.py
audit_logs/: admin.py  apps.py  middleware.py  models.py
auth_app/: admin.py  models.py  permission_matrix.py  serializers.py  signals.py  views.py
companies/: admin.py  models.py  serializers.py  views.py
dashboard/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
docs/: README.md  api_core_architecture.md  api_developer_cheatsheet.md  api_tag_structure.md  audit_system.md  celery-config.md  docusaurus.config.js  docusaurus.config.ts  index.md  package-lock.json  package.json  rbac_system.md  sentry-integration.md  sidebars.js  sidebars.ts
incidents/: admin.py  apps.py  models.py  signals.py
mitre/: README.md  admin.py  apps.py  models.py  tasks.py  views.py
notifications/: admin.py  models.py  signals.py  tasks.py
observables/: admin.py  apps.py  models.py  serializers.py  views.py
reporting/: models.py  urls.py  utils.py  views.py
scripts/: check_admin_registration.py  check_api_docs.py  check_app_structure.py  check_audit_logs.py  check_celery_tasks.py  check_compliance.py  check_logging.py  check_placeholders.py  check_test_structure.py  generate_schema.py
sentineliq/: __init__.py  (+7 more)
(+427 files in other folders)
